chore(git): agregar .gitignore para excluir archivos sensibles y temporales
Se añade archivo .gitignore con reglas para:
- Excluir node_modules, directorios de cache y salidas de build
- Ignorar archivos de entorno (.env, .env.dev, .env.qa, .env.prd)
- Omitir archivos del sistema, logs y configuraciones locales de IDEs
- Incluir .env.template como referencia segura para configuración de entornos

Este archivo evita la exposición de datos sensibles y mantiene el repositorio limpio.

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,59 @@
+# Node modules
 node_modules/
+**/node_modules/
+
+# Build outputs
 .expo/
 dist/
-npm-debug.*
-*.jks
-*.p8
-*.p12
-*.key
-*.mobileprovision
-*.orig.*
-web-build/
-node_modules/
+build/
+android/
+ios/
+
+# Expo
+*.expo*
+*.turtle*
+
+# React Native / Metro / Cache
+.cache/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+expo-debug.log
+
+# TypeScript
+*.tsbuildinfo
+
+# VSCode/IDE
+.vscode/
+.idea/
+
+# System files
+.DS_Store
+Thumbs.db
+
+# Environment files (manejar vía método seguro)
+.env
+.env.*
+!.env.template
+
+# Archivos sensibles o temporales
+*.bak
+*.tmp
+*.swp
+
+# Docker
+docker-compose.override.yml
+*.pid
+
+# Git control
+!.gitignore
+
+# Coverage / Testing
+coverage/
+jest-cache/
+*.lcov
+.nyc_output
+
+# Output de scripts
+scripts/output/
