chore(config): actualizar app.json y tsconfig.json; ajustar App.tsx para registrar nueva HomePage

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -14,7 +14,9 @@
 
     "plugins": [],
 
-    "orientation": "portrait",
+    
+    "orientation": "default", 
+
     "icon": "./assets/icon.png",
 
     "userInterfaceStyle": "light",
