--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -3,10 +3,12 @@
   "compilerOptions": {
     "strict": true,
     "jsx": "react-jsx",
-
     "baseUrl": ".",
     "paths": {
-      "~/*": ["src/*"]
-    }
+      "~/*": [
+        "src/*"
+      ]
+    },
+    "noImplicitAny": false
   }
 }
