--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -21,5 +21,7 @@ services:
       - EXPO_DEVTOOLS_LISTEN_ADDRESS=0.0.0.0
       - EXPO_NO_TELEMETRY=1
       - REACT_NATIVE_PACKAGER_HOSTNAME=192.168.3.83
+      - EXPO_TOKEN=
+      - EAS_NO_VCS=1
     entrypoint: ["sleep", "infinity"]    # 👈 El contenedor queda esperando
     tty: true
