feat(dockerfile): instala eas-cli y habilita entorno compatible con builds Expo
- Se instala eas-cli de forma global junto a expo-cli.
- Se mantiene bash para soporte de scripts interactivos.
- Se optimiza la detección de package.json y node_modules.
- Se deja preparada la imagen para builds locales sin dependencia de Git.

Facilita compilaciones reproducibles de APK directamente desde contenedor.

--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -9,7 +9,7 @@ WORKDIR /app
 
 # Instalamos Expo CLI de forma global
 # Esto permite usar "npx expo ..." sin necesidad de instalar localmente cada vez
-RUN npm install -g expo-cli
+RUN npm install -g expo-cli eas-cli
 
 # Copiamos todo temporalmente para verificar existencia de archivos
 COPY . /tmp/build-context/
