chore(app.json): ajusta configuración del proyecto Expo para entorno de build
- Se revisa y consolida la configuración base para compatibilidad con EAS Build.
- Se asegura que los campos obligatorios como slug, name e icon estén correctamente definidos.
- Preparación para builds consistentes en entornos Dockerizados.

Este cambio garantiza que la app esté alineada con los requisitos de compilación en EAS.

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -3,38 +3,39 @@
     "name": "Ambrosia",
     "slug": "Ambrosia",
     "version": "1.0.0",
-
     "web": {
       "favicon": "./assets/favicon.png"
     },
-
     "experiments": {
       "tsconfigPaths": true
     },
-
     "plugins": [],
-
-    
-    "orientation": "default", 
-
+    "orientation": "default",
     "icon": "./assets/icon.png",
-
     "userInterfaceStyle": "light",
-
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true
     },
     "android": {
+      "package": "com.blackzeus.ambrosia",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       }
-    }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "360727d6-f8f2-4783-965d-4ea3fac0f525"
+      }
+    },
+    "owner": "blackzeus"
   }
 }
