--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -20,8 +20,8 @@ services:
     environment:
       - EXPO_DEVTOOLS_LISTEN_ADDRESS=0.0.0.0
       - EXPO_NO_TELEMETRY=1
-      - REACT_NATIVE_PACKAGER_HOSTNAME=192.168.3.83
-      - EXPO_TOKEN=
       - EAS_NO_VCS=1
+      - REACT_NATIVE_PACKAGER_HOSTNAME=${REACT_NATIVE_PACKAGER_HOSTNAME}
+      - EXPO_TOKEN=${EXPO_TOKEN}
     entrypoint: ["sleep", "infinity"]    # 👈 El contenedor queda esperando
     tty: true
