git commit -m "refactor(structure): reorganización de carpetas del proyecto
- Se reestructuró la jerarquía de carpetas para mejorar la modularidad y el mantenimiento.
- Se movieron componentes compartidos a src/components/
- Se separaron vistas en src/pages/
- Se reorganizaron assets estáticos en src/assets/ (imagenes, fuentes, íconos)
- Se centralizó la configuración global (navegación, tema, estilos) en src/config/
- Se actualizó la ruta de entrada en App.tsx según la nueva estructura

Esta refactorización no modifica la lógica de negocio, solo la estructura del proyecto."

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -4,7 +4,7 @@
     "slug": "Ambrosia",
     "version": "1.0.0",
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/expo/favicon.png"
     },
     "experiments": {
       "tsconfigPaths": true
@@ -13,10 +13,10 @@
       "expo-font"
     ],
     "orientation": "default",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/expo/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/expo/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -29,7 +29,7 @@
     "android": {
       "package": "com.blackzeus.ambrosia",
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/expo/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       }
     },
