feat(docker): ajustes en docker-compose-dev y optimización de Dockerfile.dev
- Se actualiza el nombre y versionado de la imagen en docker-compose-dev.yml
- Se implementa control de versiones mediante etiquetas para facilitar el seguimiento de builds
- Se reestructura Dockerfile.dev para optimizar el tiempo de generación del contenedor, reduciendo pasos redundantes y mejorando la caché

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,14 +1,15 @@
 services:
   expo:
-    container_name: ambrosia-expo-dev
+    container_name: ambrosia-expo
     build:
       context: ./frontend
       dockerfile: ../docker/Dockerfile.dev
+    image: ambrosia-expo:1.0.0  
     working_dir: /app
     volumes:
       - ./frontend:/app
       - ./scripts:/scripts:ro        # 👈 Montaje del script en modo solo lectura
-      - /app/node_modules
+      #- /app/node_modules
     labels:
       - stack=Ambrosia
     ports:
