--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@expo-google-fonts/cinzel": "^0.4.1",
     "@expo-google-fonts/crimson-text": "^0.4.0",
     "@expo/metro-runtime": "~5.0.4",
+    "@types/react-native": "^0.72.8",
     "expo": "^53.0.10",
     "expo-font": "~13.3.1",
     "expo-splash-screen": "~0.30.9",
